feat: 修改目录结构

--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "A big file uploader",
   "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
@@ -32,6 +37,12 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "big-file-uploader": "link:",
     "spark-md5": "^3.0.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "big-file-uploader": "link:"
+    }
   }
 }
