--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,18 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es5",
+    "lib": [
+      "es2018",
+      "dom" // 添加 dom 支持
+    ],
     "module": "esnext",
-    "declaration": true,
+    "declaration": true, // 生成 .d.ts 文件
+    "declarationDir": "./dist", // 输出到 dist 目录
+    "emitDeclarationOnly": false, // 同时输出 js 和 .d.ts
+    "typeRoots": [
+      "./node_modules/@types",
+      "src/types"
+    ],
     "outDir": "./dist",
     "strict": true,
     "moduleResolution": "node",
