--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/jest": "^29.5.14",
+    "@types/spark-md5": "^3.0.5",
     "jest": "^29.7.0",
     "rollup": "^2.79.2",
     "tslib": "^2.8.1",
