feat: 开发环境启用sourcemap

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "build": "cross-env NODE_ENV=production rollup -c",
+    "dev": "cross-env NODE_ENV=development rollup -c -w",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -31,6 +31,7 @@
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/jest": "^29.5.14",
     "@types/spark-md5": "^3.0.5",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "rollup": "^2.79.2",
     "tslib": "^2.8.1",
